--- a/index.html
+++ b/index.html
@@ -3679,7 +3679,7 @@ rozpuszczalna
         </div>
 
                                     <a href="https://kp-zabka.gay.edu.pl/" class="button info-box__button">
-                    Poznaj najświeższe promocje
+                    최신 프로모션 보기
                     <span class="icon button__icon -right -hide-sm -show-lg-inline-block">
                         <svg><use xlink:href="#icon-arrow-right" /></svg>
                     </span>
